--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,9 +5,9 @@
     <title>Accept a payment</title>
     <meta name="description" content="A demo of a payment on Stripe" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="../static/css/checkout.css" />
     <script src="https://js.stripe.com/v3/"></script>
     <script src="../static/js/checkout.js" defer></script>
+    <link href="../static/css/checkout.css" rel="stylesheet">
   </head>
   <body>
     <!-- Display a payment form -->
